# log-signing-mpc

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  certs_creation.sh  communication_example.sh  docker-compose-13.yml  docker-compose-24.yml  docker-compose.yml  keygen_example.sh  license.txt  start-stop.sh
.github/workflows/: build-and-unit-tests.yml  docker-image.yml  integration-tests.yml  performance-tests.yml  t1n3.yml  t2n4.yml
certs/: ca_cert.pem  ca_cert.srl  ca_key.pem
certs/private/: private_key_1.pem  private_key_2.pem  private_key_3.pem
certs/public/: cert_1.pem  cert_2.pem  cert_3.pem  csr_1.pem  csr_2.pem  csr_3.pem
docs/report/: report.md
evaluation/: setup.py
evaluation/performance/: key_generation.py  perf_signing_test.py  signing.py  verification.py
evaluation/simple_operations/: key_generation.py  signing.py  verification.py
evaluation/tests/: key_generation_test.py  signing_test.py  verification_test.py
evaluation/utils/: common.py  endpoint_triggers.py  keygen.py  signatures.py
example-logs/: log-generation.py
examples/: certs_creation.sh  certs_creation_win.sh  keygen_example.sh  san.cnf
integration-tests/: common.py  endpoint_triggers.py  key_generation_test.py  key_generation_tests.py  setup_for_tests.py  signing_test.py  verification_test.py
performance_benchmarks/: perf_signing_test.py
python/performance/: perf_signing_test.py
python/tests/: key_generation_test.py  signing_test.py  verification_test.py
python/utils/: create_payload.py  endpoint_triggers.py  keygen.py  signatures.py
scripts/: run_servers_on_localhost.ps1
src/: check_signature.rs  check_timestamp.rs  common.rs  communication.rs  create_communication_channel.rs  endpoints.rs  key_generation.rs  key_generator.rs  main.rs  mpc.rs  mpc_config.rs  mpc_operations.rs  pub_endpoints.rs  rocket_instances.rs  signing.rs  utils.rs
src/communication/: create_communication_channel.rs  mod.rs  room.rs  step_writer.rs
src/endpoints/: create_communication_channel.rs  mod.rs  pub_endpoints.rs  rocket_instances.rs
src/mpc/: mod.rs  operations.rs  utils.rs
src/mpc_operations/: check_signature.rs  key_generation.rs  signing.rs
tests/: common.py  endpoint_triggers.py
timestamping-server/: Cargo.toml
web-frontend/: index.html  openapi.yaml
(+23 files in other folders)
