[package]
name = "timestamping-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multi-party-ecdsa = { git = "https://github.com/zengo-x/multi-party-ecdsa.git", rev = "3e711c792db06aaeeac5694b137d24f7551069d1", default-features = false }
curv-kzen = { version = "*", default-features = false, features = ["num-bigint"] }