[package]
name = "timestamping-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multi-party-ecdsa = { git = "https://github.com/zengo-x/multi-party-ecdsa.git", rev = "3e711c792db06aaeeac5694b137d24f7551069d1", default-features = false }
curv-kzen = { version = "*", default-features = false, features = ["num-bigint"] }
round-based = { version = "0.1.4", features = [] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { version = "0.20", features = ["global-context"]}
hex = "0.4"
sha256 = "1.1.2"

anyhow = "1"
tokio = { version = "1.25.0", features = ["full"] }
hyper = {version = "0.14.13", features = ["full"] }

reqwest = { version = "0.11.14", features = ["rustls-tls", "native-tls"] }
tokio-rustls = "0.23.4"

rustls = "0.21.0-alpha.1"
rustls-pemfile = "1.0.0"

rocket = { version = "0.5.0-rc.2", features = ["json", "mtls", "tls"] }
